apps/02-metrics/thanos/ruler/authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: thanos-ruler
spec:
  action: CUSTOM
  selector:
    matchLabels:
      app.kubernetes.io/instance: thanos-ruler
      app.kubernetes.io/managed-by: prometheus-operator
      app.kubernetes.io/name: thanos-ruler
  provider:
    name: authelia
  rules:
    - to:
        - operation:
            hosts:
              - ruler.home.alden.ai
